--- a/markup/css/bootstrap.css
+++ b/markup/css/bootstrap.css
@@ -15,6 +15,7 @@
 /*** Unit-less `line-height` for use in components like buttons.*/
 /* 25/16*/
 /*** By default, this inherits from the `<body>`.*/
+/* Forms*/
 /*== Navbar*/
 /* Basics of a navbar*/
 /* Navbar links*/
@@ -3348,7 +3349,7 @@ output {
   padding-top: 7px;
   font-size: 16px;
   line-height: 1.5625;
-  color: #555555;
+  color: #030611;
 }
 
 .form-control {
@@ -3358,11 +3359,11 @@ output {
   padding: 6px 12px;
   font-size: 16px;
   line-height: 1.5625;
-  color: #555555;
+  color: #030611;
   background-color: #fff;
   background-image: none;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  border: 1px solid #938f09;
+  border-radius: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
@@ -3371,23 +3372,23 @@ output {
 }
 
 .form-control:focus {
-  border-color: #66afe9;
+  border-color: #030611;
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(3, 6, 17, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(3, 6, 17, 0.6);
 }
 
 .form-control::-moz-placeholder {
-  color: #999;
+  color: #030611;
   opacity: 1;
 }
 
 .form-control:-ms-input-placeholder {
-  color: #999;
+  color: #030611;
 }
 
 .form-control::-webkit-input-placeholder {
-  color: #999;
+  color: #030611;
 }
 
 .form-control::-ms-expand {
@@ -3472,7 +3473,7 @@ input[type="search"] {
 }
 
 .form-group {
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 .radio,
@@ -4834,11 +4835,11 @@ tbody.collapse.in {
   font-size: 16px;
   font-weight: normal;
   line-height: 1;
-  color: #555555;
+  color: #030611;
   text-align: center;
   background-color: #eeeeee;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  border: 1px solid #938f09;
+  border-radius: 0;
 }
 
 .input-group-addon.input-sm,
