--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -492,3 +492,37 @@ img{
    @include font(0.8125em,1.461);
    padding: 0.692em 0.923em;
 }
+.pagination{
+   > li{
+      display: inline-block;
+      vertical-align: top;
+      margin-left: 0.5em;
+      > a,
+      > span{
+         @include font(0.8125em,1.53861);
+         @include size(2.923em);
+         border-radius: 50%;
+         padding: 0.6153em;
+         display: block;
+         float: none;
+         @include media('>desktop'){
+            @include size(3.8461em);
+            padding: 1.1538461em;
+         }
+      }
+      &:first-child{
+         >a,
+         >span{
+            border-bottom-left-radius: 50%;
+            border-top-left-radius: 50%;
+         }
+      }
+      &:last-child{
+         >a,
+         >span{
+            border-bottom-right-radius: 50%;
+            border-top-right-radius: 50%;
+         }
+      }
+   }
+}
