--- a/markup/scss/pages/_blog.scss
+++ b/markup/scss/pages/_blog.scss
@@ -206,3 +206,95 @@
 		padding: 4.6875em 0;
 	}
 }
+/* Single article*/
+.single-article-header{
+	background-color: $brand-primary;
+	padding: 3.125em 0;
+	color: $white;
+	.top-section{
+		margin: 0 0 0.3125em;
+		display: block;
+	}
+	.link{
+		color: desaturate($brand-info, 48%);
+		@include font(0.8125em,1.5384, 600);
+		text-transform: uppercase;
+		.icon{
+			display: inline-block;
+			margin-right: 1em;
+		}
+	}
+	h1{
+		@include font(1.25em, 1.55,600);
+		margin: 0 0 0.95em;
+		color: #fff;
+	}
+	.entry-meta{
+		@include font(0.8125em,1.5384,300);
+		text-transform: uppercase;
+		.entry-date{
+			font-style: normal;
+		}
+		.bull{
+			margin: 0 0.5384em;
+			font-weight: 700;
+		}
+	}
+}
+#two-columns{
+	padding-bottom: 4.6875em;
+	padding-top: 3.125em;
+}
+.single-article{
+	.img-right{
+		margin-bottom: 1.5625em;
+		margin-left: 1.9375em;
+	}
+	a{
+		font-weight: 600;
+	}
+	h2,
+	.sub-head{
+		color: desaturate($brand-primary, 9%);
+		@include font(1.25em, 1.25, 700);
+		margin: 0 0 0.65em;
+	}
+	ul,
+	.unordered-list{
+		padding: 0.8125em 0 1.5625em;
+		@extend %listreset;
+		li{
+			margin-bottom: 0.8125em;
+			padding-left: 1.5625em;
+			position: relative;
+			&:before{
+				background-color: $black;
+				@include size(6px);
+				position: absolute;
+				content: '';
+				top: 13px;
+				left: 0;
+			}
+		}
+	}
+	ol,
+	.ordered-list{
+		padding: 0.8125em 0 1.5625em;
+		counter-reset: item;
+		@extend %listreset;
+		li{
+			margin-bottom: 0.8125em;
+			padding-left: 1.5625em;
+			position: relative;
+			&:before{
+				@include font(0.8125em, 1.5384, 700);
+				content: counter(item);
+				counter-increment: item;
+				position: absolute;
+				color: $black;
+				top: 3px;
+				left: 0;
+			}
+		}
+	}
+}
