--- a/markup/scss/layout/_header.scss
+++ b/markup/scss/layout/_header.scss
@@ -1,3 +1,28 @@
+.affix{
+   width: 100%;
+   z-index: 11;
+   .navbar-default{
+   	background-color: $black;
+   	@include media('>tablet'){
+		.navbar-nav{
+   			> li{
+   				> a{
+   					color: $white;
+   				}
+   			}
+   		}
+   	}
+   		.navbar-toggle{
+   			.icon-bar{
+   				background-color: $white;
+   			}
+   			&:hover,
+   			&:focus{
+   				background-color: transparent;
+   			}
+   		}
+   }
+}
 #nav{
 	position: relative;
 }
@@ -76,7 +101,6 @@
 #main-nav{
 	-webkit-box-shadow: 0 15px 10px 0 rgba(0, 0, 0, 0.1), 0 1px 0 rgba(0, 0, 0, 0.1) inset;
 	        box-shadow: 0 15px 10px 0 rgba(0, 0, 0, 0.1), 0 1px 0 rgba(0, 0, 0, 0.1) inset;
-	background-color: $white;
 	position: absolute;
 	z-index: 999;
 	width: 100%;
@@ -88,5 +112,8 @@
 		-webkit-box-shadow: none;
 		        box-shadow: none;
 		width: auto;
+	}
+	@include media('<=tablet'){
+		background-color: $white;
 	}
 }
