--- a/markup/scss/pages/_services.scss
+++ b/markup/scss/pages/_services.scss
@@ -23,12 +23,15 @@
 }
 .service-item{
 	background-color: transparentize($black, 0.7);
-	padding: 3.125em 3.8125em;
 	margin: 0 0 1.5625em;
 	position: relative;
 	border-radius: 4px;
 	text-align: center;
+	padding: 1.9375em;
 	display: block;
+	@include media('>=phone'){
+		padding: 3.125em 3.8125em;
+	}
 	.service-icon{
 		color: lighten($brand-info, 12%);
 		margin-bottom: 1.875em;
@@ -44,11 +47,17 @@
 			margin: 0 0 1.3225em;
 			font-weight: 300;
 			color: $white;
+			@include media('<=s-phone'){
+				font-size: 1.5625em;
+			}
 		}
 		p{
 			font-family: $font-family-serif;
 			@include font(1.25em, 1.55);
 			color: $white;
+			@include media('<=s-phone'){
+				font-size: 1em;
+			}
 		}
 	}
 	&:hover{
